--- a/app/src/main/res/layout/activity_setting_show.xml
+++ b/app/src/main/res/layout/activity_setting_show.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:heima="http://schemas.android.com/apk/res-auto"
+              xmlns:toggle="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical" >
+              android:orientation="vertical">
 
     <TextView
         style="@style/titleStyle"
-        android:text="设置中心" />
+        android:text="设置中心"/>
 
-    <!--<com.example.dell.safe360.ui.SettingItemButton
+    <com.example.dell.safe360.ui.SettingItemButton
         android:id="@+id/sib_setting_autoupdate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/setting_item_first_bg"
-        heima:sib_title="自动更新" >
+        heima:sib_title="自动更新">
     </com.example.dell.safe360.ui.SettingItemButton>
 
     <com.example.dell.safe360.ui.SettingItemButton
@@ -24,7 +25,17 @@
         android:layout_height="wrap_content"
         android:background="@drawable/setting_item_last_bg"
         heima:open_status="true"
-        heima:sib_title="终于完成了" >
-    </com.example.dell.safe360.ui.SettingItemButton>-->
+        heima:sib_title="终于完成了">
+    </com.example.dell.safe360.ui.SettingItemButton>
+
+    <com.zcw.togglebutton.ToggleButton
+        android:id="@+id/tb_sib_temp"
+        android:layout_width="54dp"
+        android:layout_height="30dp"
+        toggle:tbBorderWidth="2dp"
+        toggle:tbOffBorderColor="#000"
+        toggle:tbOffColor="#ddd"
+        toggle:tbOnColor="#f00"
+        toggle:tbSpotColor="#00f"/>
 
 </LinearLayout>
