--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,19 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">45dp</item>
     </style>
+    <!-- 设置界面条目样式 -->
+    <style name="sjfd_setting_item" parent="android:Widget.Holo.Light.TextView">
+        <item name="android:drawableLeft">@drawable/dialog_title_default_icon</item>
+        <item name="android:drawablePadding">3dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <!-- 按钮按钮 -->
+    <style name="buttonStyle" parent="android:Widget.Holo.Light.Button">
+        <item name="android:background">@drawable/dialog_ok_bg</item>
+        <item name="android:textColor">@color/dialog_btn_text_bg</item>
+    </style>
 </resources>
